test/typechecker.d/valid/typedef-enum-1.surc
def enum Number = { one two three }

x: Number = two
