test/typechecker.d/invalid/typedef-enum-1.surc
def enum Number = { one two three }

x: Number = 1
